@@ -45,11 +45,12 @@ QuestHelper.tracker = tracker
 local resizing = false
 tracker:SetWidth(200)
 tracker:SetHeight(100)
+--tracker:SetFrameStrata("LOW")
 tracker.dw, tracker.dh = 200, 100
 
 local in_tracker = 0
 
-minbutton:SetFrameStrata("DIALOG")
+--minbutton:SetFrameStrata("HIGH")
 minbutton:Hide()
 minbutton:SetPoint("TOPRIGHT", WatchFrame) -- We default to a different location to make it more likely to display the right item.
 minbutton:SetMovable(true)
@@ -59,13 +60,14 @@ minbutton:SetHeight(32)
 local minbutton_tex = minbutton:CreateTexture()
 minbutton_tex:SetAllPoints()
 minbutton_tex:SetTexture(.6, .6, .6)
+minbutton_tex:SetParent(minbutton)
 
 local sigil = minbutton:CreateTexture("BACKGROUND", minbutton_tex)
 sigil:SetHeight(32)
 sigil:SetWidth(32)
 --sigil:SetPoint("CENTER", 0, 0)
 sigil:SetTexture("Interface\\AddOns\\QuestHelper\\sigil")
-sigil:SetPoint("CENTER", minbutton, "CENTER")
+sigil:SetPoint("CENTER", minbutton_tex, "CENTER")
 
 
 tracker:SetPoint("CENTER", minbutton)
